# markitdown-katex-plugin

./: README.md  pyproject.toml
src/markitdown_katex_plugin/: __init__.py  _converter.py
tests/: test_katex_plugin.py
